DEAL WITH CONFLICTS

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>Demo project for Spring Boot</description>
 
     <properties>
+        <start-class>com.ttree.ttree.TtreeApplication</start-class>
         <java.version>1.8</java.version>
     </properties>
 
@@ -82,6 +83,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <excludes>
                         <exclude>
