--- a/ttreeGradle/build.gradle
+++ b/ttreeGradle/build.gradle
@@ -13,6 +13,7 @@ repositories {
 }
 
 dependencies {
+	compile 'org.apache.tomcat.embed:tomcat-embed-jasper'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
